Import of AARONJJ/Class-DBI-Plugin-FilterOnClick-1.1 from CPAN.
gitpan-cpan-distribution: Class-DBI-Plugin-FilterOnClick
gitpan-cpan-version:      1.1
gitpan-cpan-path:         AARONJJ/Class-DBI-Plugin-FilterOnClick-1.1.tar.gz
gitpan-cpan-author:       AARONJJ
gitpan-cpan-maturity:     released

--- a/t/examples/cdbi_config.ini
+++ b/t/examples/cdbi_config.ini
@@ -8,7 +8,7 @@ debug=0
 rows=45
 
 ; items to be removed from url on each query
-exclude_from_url=page
+exclude_from_url=page|
 
 ; columns to display
 ;display_columns=CustomerID|LastName|FirstName
@@ -17,7 +17,7 @@ exclude_from_url=page
 ; exclude_columns
 
 ; class name of the table being accessed
-cdbi_class=Baseball::Master
+cdbi_class="Foo"
 
 ; name of the cgi page being calling
 page_name=test_page.cgi
